# dns-switch

./: .gitignore  .goreleaser.yml  BREW_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PUBLISHING.md  QUICKSTART.md  README.md  Taskfile.yaml  config.yaml  dns_switch.py  go.mod  go.sum  pyproject.toml  requirements.txt  setup.py
.github/workflows/: README.md  build.yml  release.yml
.task/checksum/: build
Formula/: dns-switch.rb
cmd/dns-switch/: main.go
docs/: ARCHITECTURE.md
internal/config/: config.go
internal/dns/: dns.go
internal/tui/: tui.go
scripts/: prepare_release.sh
