[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-switch"
version = "1.0.0"
description = "A user-friendly TUI for quickly switching between DNS configurations"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pinaka Team"}
]
keywords = ["dns", "tui", "terminal", "cli", "network"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.50.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/pinaka-io/dns-switch"
Repository = "https://github.com/pinaka-io/dns-switch"
Issues = "https://github.com/pinaka-io/dns-switch/issues"

[project.scripts]
dns-switch = "dns_switch:main"

[tool.setuptools]
py-modules = ["dns_switch"]

[tool.setuptools.package-data]
"*" = ["config.yaml"]
